--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,20 @@ services: # serviços que serão executados pelo docker compose
     build: . # constroi a imagem do Dockerfile do diretório atual
     ports: 
       - "5555:5555" # mapeia a porta 5555 do computador para a porta 5555 do contêiner
-    depends_on: 
-      - database # garante que o serviço database seja iniciado antes do serviço flask-app
+    depends_on:
+      database:
+        condition: service_healthy # garante que o serviço database esteja funcionando antes do serviço flask-app começar a rodar
 
   database: # o nome do serviço é o nome do contêiner
     image: postgres:10 # usa a imagem oficial do postgres na versão 10
-    environment: # define as variáveis ​​de ambiente
+    environment: # define as variáveis de ambiente
       POSTGRES_USER: postgres # nome do usuário do banco de dados
       POSTGRES_PASSWORD: postgres # senha do banco de dados
       POSTGRES_DB: postgres # nome do banco de dados
     ports: 
        - "5433:5432" # mapeia a porta 5433 do computador para a porta 5432 do contêiner
+    healthcheck: # define o comando que será executado para verificar se o serviço está funcionando
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 15s
+      retries: 5
